--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
 					Ha Ha, Hangman.
 				</p>
 				<div class="col-sm-2"></div>
-				<div class="col-sm-12"></div>
 				<p class="col-sm-8 col-sm-offset-2" id="myguess">
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat error voluptas illum commodi cum, sapiente alias voluptates aspernatur enim earum et, quasi molestiae, illo maxime omnis cumque officiis delectus at.
 				</p>
 				<div class="col-sm-2"></div>
 				<p class="col-sm-6 col-sm-offset-3" id="hint"></p>
 				<div class="col-sm-3"></div>
+				<div class="col-sm-2 col-sm-offset-8 text-center">This is a placeholder hint</div>
 			</div>
 		</div>
 	</main>
