--- a/index.html
+++ b/index.html
@@ -7,60 +7,30 @@
 	<title>This is a prototype to my hangman game</title>
 	<link href="https://fonts.googleapis.com/css?family=Coming+Soon|Cutive+Mono" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<style>
-	.navbar {
-		border-radius: 0px;
-	}
-	html {
-		height: 100%;
-		overflow: hidden;
-	}
-
-	main {
-		position: relative;
-		top: 0;
-		min-height: 100%;
-		padding:30rem 0;
-	}
-
-	header button {
-		position: relative;
-		top: 9px;
-	}
-	
-	p {
-		text-align: center;
-		font-family: "Cutive Mono", monospace;
-		font-size: 21px;
-		font-weight: bold;
-		letter-spacing: 2px;
-	}
-
-	p:first-child {
-		font-family: "Coming Soon", monospace;
-		font-size: 36px;
-		font-weight: 600;
-	}
-
-	</style>
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+	<canvas class="other-than-header" id="canvas"></canvas>
 	<header class="navbar navbar-inverse navbar-fixed-bottom">
 		<div class="container">
-			<div class="navbar-header">
+			<!-- <div class="navbar-header">
 				<a class="navbar-brand">
 					Hangman Game
 				</a>
-			</div>
-			<div class="nav navbar-nav navbar-right">
+			</div> -->
+			<h2 class="text-center">
+				Hangman Game
+			</h2>
+			<!-- <div class="nav navbar-nav navbar-right">
 				<button class="btn" id="start">
 					Let's start the game
 				</button>
 				<button class="btn" id="stop">
 					Reset Game
 				</button>
-			</div>
+			</div> -->
+			<div class="invisible-clickarea" id="start"></div>
 		</div>
 	</header>
 	<main>
@@ -84,6 +54,8 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<script src="string_library.js"></script>
+	<script src="canvas_obj.js"></script>
 	<script src="game.js"></script>
 </body>
 
