a_complete_game_prototype_update

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 					Reset Game
 				</button>
 			</div> -->
+			
+			<div class="invisible-clickarea"></div>
 			<div class="invisible-clickarea" id="start"></div>
 		</div>
 	</header>
@@ -41,12 +43,12 @@
 				</p>
 				<div class="col-sm-2"></div>
 				<p class="col-sm-8 col-sm-offset-2" id="myguess">
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat error voluptas illum commodi cum, sapiente alias voluptates aspernatur enim earum et, quasi molestiae, illo maxime omnis cumque officiis delectus at.
+					Hello, welcome to an exciting game of Hang Man, where the fun and thrill is real.
 				</p>
 				<div class="col-sm-2"></div>
-				<p class="col-sm-6 col-sm-offset-3" id="hint"></p>
+				<p class="col-sm-6 col-sm-offset-3"></p>
 				<div class="col-sm-3"></div>
-				<div class="col-sm-2 col-sm-offset-8 text-center">This is a placeholder hint</div>
+				<div class="col-sm-3 col-sm-offset-7" id="hint"></div>
 			</div>
 		</div>
 	</main>
