organize some files so I dont look sloppy :

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>This is a prototype to my hangman game</title>
 	<link href="https://fonts.googleapis.com/css?family=Coming+Soon|Cutive+Mono" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
@@ -43,7 +43,7 @@
 				</p>
 				<div class="col-sm-2"></div>
 				<p class="col-sm-8 col-sm-offset-2" id="myguess">
-					Hello, welcome to an exciting game of Hang Man, where the fun and thrill is real.
+					Hello, welcome to an exciting game of Hangman, where the fun and thrill is real.
 				</p>
 				<div class="col-sm-2"></div>
 				<p class="col-sm-6 col-sm-offset-3"></p>
@@ -56,9 +56,9 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<script src="string_library.js"></script>
-	<script src="canvas_obj.js"></script>
-	<script src="game.js"></script>
+	<script src="scripts/string_library.js"></script>
+	<script src="scripts/canvas_obj.js"></script>
+	<script src="scripts/game.js"></script>
 </body>
 
 </html>
